test/errors/type/nomt.yasl

const b = true

echo mt.get(b)
