test/errors/type/nomt.yasl.err
TypeError: tostr not supported for operand of type table. (line 4)
